--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,14 @@
 ---
 name: Games-SGF-Tournament
-version: v0.1_5
+version: v1.0.0
 author:
   - Al Nikolov <alnikolov@narod.ru>
 abstract: Tournament statistics generator
 license: gpl
 requires:
-  Test::More: 0
   version: 0
 provides:
   Games::SGF::Tournament:
     file: lib/Games/SGF/Tournament.pm
-    version: v0.1_5
+    version: v1.0.0
 generated_by: Module::Build version 0.26
