Import of CLOWN/Games-SGF-Tournament-v1.1_1 from CPAN.
gitpan-cpan-distribution: Games-SGF-Tournament
gitpan-cpan-version:      v1.1_1
gitpan-cpan-path:         CLOWN/Games-SGF-Tournament-v1.1_1.tar.gz
gitpan-cpan-author:       CLOWN
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,15 @@
 ---
 name: Games-SGF-Tournament
-version: v1.0.0
+version: v1.1_1
 author:
   - Al Nikolov <alnikolov@narod.ru>
 abstract: Tournament statistics generator
 license: gpl
 requires:
+  Parse::RecDescent: 0
   version: 0
 provides:
   Games::SGF::Tournament:
     file: lib/Games/SGF/Tournament.pm
-    version: v1.0.0
+    version: v1.1_1
 generated_by: Module::Build version 0.26
